test/sema/typeck/binop/add-assign-wrong-type.dora
fn f(mut x: Int, y: Int32): Int {
    x += y;
    x
}
